--- a/SpawnCamper.Server/src/UI/MainWindow.xaml
+++ b/SpawnCamper.Server/src/UI/MainWindow.xaml
@@ -1,12 +1,12 @@
-<Window x:Class="ProcessTracer.Server.UI.MainWindow"
+<Window x:Class="SpawnCamper.Server.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:converters="clr-namespace:ProcessTracer.Server.UI.Converters"
-        xmlns:vm="clr-namespace:ProcessTracer.Server.UI.ViewModels"
+        xmlns:converters="clr-namespace:SpawnCamper.Server.UI.Converters"
+        xmlns:vm="clr-namespace:SpawnCamper.Server.UI.ViewModels"
         mc:Ignorable="d"
-        Title="Process Tracer"
+        Title="SpawnCamper"
         Width="1100"
         Height="700"
         MinWidth="900"
