--- a/SpawnCamper.Server/src/App.xaml
+++ b/SpawnCamper.Server/src/App.xaml
@@ -1,4 +1,4 @@
-<Application x:Class="SpawnCamper.Server.UI.App"
+<Application x:Class="SpawnCamper.Server.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Startup="OnStartup">
